# SendSMS

./: AUTHORS  CNAME  ChangeLog  Makefile.am  NEWS  README  README.dev  README.md  configure.in  makedeb.sh
debian/: changelog  control  copyright  docs  emacsen-install.ex  emacsen-remove.ex  emacsen-startup.ex  gsendsms.install  init.d.ex  manpage.1.ex  manpage.sgml.ex  manpage.xml.ex  menu.ex  postinst.ex  postrm.ex  preinst.ex  prerm.ex  rules  sendsms.cron.d.ex  sendsms.default.ex  sendsms.doc-base.EX  sendsms.install  watch.ex
gui/: Makefile.am  gsendsms.c  gsendsms.glade
src/: Makefile.am  debug.h  encoder.c  encoder.h  sendsms.c  sendsms.h  sms-api.c  sms-api.h  web.c  web.h
